Fix overlapping buttons on wide screens.

--- a/src/mediaqueries.css
+++ b/src/mediaqueries.css
@@ -1,6 +1,7 @@
 @media only screen and (max-device-height: 4000px) and (orientation: landscape) {
   :root{
-    --radius: 43vmin;
+    --radius: 27vmax;
+    --button-text: calc(1 * (var(--radius) / 10));
   }
   
   .App-main {
